// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should render customized min & max slider correctly 1`] = `
.c3 {
  position: absolute;
  z-index: 0;
  width: 100%;
  height: 4px;
  border-radius: 0.125rem;
  background-color: #dee5ef;
  -webkit-transition: background-color 200ms ease 0s;
  transition: background-color 200ms ease 0s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 {
  position: absolute;
  z-index: 1;
  height: 4px;
  border-radius: 0.125rem;
  background-color: #50acff;
  -webkit-transition: background-color 200ms ease 0s;
  transition: background-color 200ms ease 0s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 {
  position: relative;
  width: 100%;
  margin-bottom: 16px;
  padding: 16px 8px 20px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::before {
  content: '100';
  position: absolute;
  top: 0;
  left: 4px;
  color: #67758d;
  font-size: 12px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c0::after {
  content: '200';
  position: absolute;
  top: 0;
  right: 4px;
  color: #67758d;
  font-size: 12px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c9 {
  position: absolute;
  z-index: 2;
  width: 12px;
  height: 12px;
  border: 2px solid;
  border-radius: 50%;
  border-color: #ffffff;
  background-color: #328ef5;
  -webkit-transform: translate3d(2px,2px,0);
  -ms-transform: translate3d(2px,2px,0);
  transform: translate3d(2px,2px,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: absolute;
  top: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  color: #67758d;
  font-size: 0.875rem;
  line-height: 1;
  -webkit-transition: font-size,color 200ms ease 0s;
  transition: font-size,color 200ms ease 0s;
  pointer-events: none;
}

.c7 {
  position: absolute;
  z-index: 2;
  width: 16px;
  height: 36px;
  -webkit-transform: translate3d(-8px,-6px,0);
  -ms-transform: translate3d(-8px,-6px,0);
  transform: translate3d(-8px,-6px,0);
}

.c1 {
  position: relative;
  width: 100%;
  height: 12px;
  padding: 4px 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:hover .c2 {
  background-color: #c4cfdd;
}

.c1:hover .c4 {
  background-color: #328ef5;
}

.c1 .c6:hover .c8 {
  width: 16px;
  height: 16px;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

<div
  class="c0"
  max="200"
  min="100"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <div
      class="c4 c5"
      style="left: 0px; width: 30%;"
    />
    <div
      class="c6 c7"
      style="left: 30%;"
    >
      <span
        class="c8 c9"
      />
      <span
        class="c10"
      >
        130
      </span>
    </div>
  </div>
</div>
`;

exports[`Slider should render disabled slider correctly 1`] = `
.c2 {
  position: absolute;
  z-index: 0;
  width: 100%;
  height: 4px;
  border-radius: 0.125rem;
  background-color: #dee5ef;
  -webkit-transition: background-color 200ms ease 0s;
  transition: background-color 200ms ease 0s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4 {
  position: absolute;
  z-index: 1;
  height: 4px;
  border-radius: 0.125rem;
  background-color: #50acff;
  -webkit-transition: background-color 200ms ease 0s;
  transition: background-color 200ms ease 0s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 {
  position: relative;
  width: 100%;
  margin-bottom: 16px;
  padding: 16px 8px 20px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::before {
  content: '0';
  position: absolute;
  top: 0;
  left: 4px;
  color: #67758d;
  font-size: 12px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c0::after {
  content: '100';
  position: absolute;
  top: 0;
  right: 4px;
  color: #67758d;
  font-size: 12px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c7 {
  position: absolute;
  z-index: 2;
  width: 12px;
  height: 12px;
  border: 2px solid;
  border-radius: 50%;
  border-color: #ffffff;
  background-color: #328ef5;
  -webkit-transform: translate3d(2px,2px,0);
  -ms-transform: translate3d(2px,2px,0);
  transform: translate3d(2px,2px,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: absolute;
  top: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  color: #67758d;
  font-size: 0.875rem;
  line-height: 1;
  -webkit-transition: font-size,color 200ms ease 0s;
  transition: font-size,color 200ms ease 0s;
  pointer-events: none;
}

.c5 {
  position: absolute;
  z-index: 2;
  width: 16px;
  height: 36px;
  -webkit-transform: translate3d(-8px,-6px,0);
  -ms-transform: translate3d(-8px,-6px,0);
  transform: translate3d(-8px,-6px,0);
}

.c1 {
  position: relative;
  width: 100%;
  height: 12px;
  padding: 4px 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1 .c3 {
  background-color: #c4cfdd;
}

.c1 .c6 {
  background-color: #c4cfdd;
  cursor: not-allowed;
}

<div
  class="c0"
  max="100"
  min="0"
>
  <div
    class="c1"
    disabled=""
  >
    <div
      class="c2"
    />
    <div
      class="c3 c4"
      style="left: 0px; width: 30%;"
    />
    <div
      class="c5"
      style="left: 30%;"
    >
      <span
        class="c6 c7"
      />
      <span
        class="c8"
      >
        30
      </span>
    </div>
  </div>
</div>
`;

exports[`Slider should render range slider correctly 1`] = `
.c3 {
  position: absolute;
  z-index: 0;
  width: 100%;
  height: 4px;
  border-radius: 0.125rem;
  background-color: #dee5ef;
  -webkit-transition: background-color 200ms ease 0s;
  transition: background-color 200ms ease 0s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 {
  position: absolute;
  z-index: 1;
  height: 4px;
  border-radius: 0.125rem;
  background-color: #50acff;
  -webkit-transition: background-color 200ms ease 0s;
  transition: background-color 200ms ease 0s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 {
  position: relative;
  width: 100%;
  margin-bottom: 16px;
  padding: 16px 8px 20px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::before {
  content: '0';
  position: absolute;
  top: 0;
  left: 4px;
  color: #67758d;
  font-size: 12px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c0::after {
  content: '100';
  position: absolute;
  top: 0;
  right: 4px;
  color: #67758d;
  font-size: 12px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c9 {
  position: absolute;
  z-index: 2;
  width: 12px;
  height: 12px;
  border: 2px solid;
  border-radius: 50%;
  border-color: #ffffff;
  background-color: #328ef5;
  -webkit-transform: translate3d(2px,2px,0);
  -ms-transform: translate3d(2px,2px,0);
  transform: translate3d(2px,2px,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: absolute;
  top: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  color: #67758d;
  font-size: 0.875rem;
  line-height: 1;
  -webkit-transition: font-size,color 200ms ease 0s;
  transition: font-size,color 200ms ease 0s;
  pointer-events: none;
}

.c7 {
  position: absolute;
  z-index: 2;
  width: 16px;
  height: 36px;
  -webkit-transform: translate3d(-8px,-6px,0);
  -ms-transform: translate3d(-8px,-6px,0);
  transform: translate3d(-8px,-6px,0);
}

.c1 {
  position: relative;
  width: 100%;
  height: 12px;
  padding: 4px 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:hover .c2 {
  background-color: #c4cfdd;
}

.c1:hover .c4 {
  background-color: #328ef5;
}

.c1 .c6:hover .c8 {
  width: 16px;
  height: 16px;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

<div
  class="c0"
  max="100"
  min="0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <div
      class="c4 c5"
      style="left: 30%; width: 30%;"
    />
    <div
      class="c6 c7"
      style="left: 30%;"
    >
      <span
        class="c8 c9"
      />
      <span
        class="c10"
      >
        30
      </span>
    </div>
    <div
      class="c6 c7"
      style="left: 60%;"
    >
      <span
        class="c8 c9"
      />
      <span
        class="c10"
      >
        60
      </span>
    </div>
  </div>
</div>
`;

exports[`Slider should render slider correctly 1`] = `
.c3 {
  position: absolute;
  z-index: 0;
  width: 100%;
  height: 4px;
  border-radius: 0.125rem;
  background-color: #dee5ef;
  -webkit-transition: background-color 200ms ease 0s;
  transition: background-color 200ms ease 0s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5 {
  position: absolute;
  z-index: 1;
  height: 4px;
  border-radius: 0.125rem;
  background-color: #50acff;
  -webkit-transition: background-color 200ms ease 0s;
  transition: background-color 200ms ease 0s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 {
  position: relative;
  width: 100%;
  margin-bottom: 16px;
  padding: 16px 8px 20px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0::before {
  content: '0';
  position: absolute;
  top: 0;
  left: 4px;
  color: #67758d;
  font-size: 12px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c0::after {
  content: '100';
  position: absolute;
  top: 0;
  right: 4px;
  color: #67758d;
  font-size: 12px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
}

.c9 {
  position: absolute;
  z-index: 2;
  width: 12px;
  height: 12px;
  border: 2px solid;
  border-radius: 50%;
  border-color: #ffffff;
  background-color: #328ef5;
  -webkit-transform: translate3d(2px,2px,0);
  -ms-transform: translate3d(2px,2px,0);
  transform: translate3d(2px,2px,0);
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: absolute;
  top: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  color: #67758d;
  font-size: 0.875rem;
  line-height: 1;
  -webkit-transition: font-size,color 200ms ease 0s;
  transition: font-size,color 200ms ease 0s;
  pointer-events: none;
}

.c7 {
  position: absolute;
  z-index: 2;
  width: 16px;
  height: 36px;
  -webkit-transform: translate3d(-8px,-6px,0);
  -ms-transform: translate3d(-8px,-6px,0);
  transform: translate3d(-8px,-6px,0);
}

.c1 {
  position: relative;
  width: 100%;
  height: 12px;
  padding: 4px 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:hover .c2 {
  background-color: #c4cfdd;
}

.c1:hover .c4 {
  background-color: #328ef5;
}

.c1 .c6:hover .c8 {
  width: 16px;
  height: 16px;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

<div
  class="c0"
  max="100"
  min="0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <div
      class="c4 c5"
      style="left: 0px; width: 30%;"
    />
    <div
      class="c6 c7"
      style="left: 30%;"
    >
      <span
        class="c8 c9"
      />
      <span
        class="c10"
      >
        30
      </span>
    </div>
  </div>
</div>
`;
